# FractalRenderer

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  fractal-renderer.js  fractal-renderer_bg.wasm  index.html  sw.js
.github/workflows/: deploy_wasm.yml  release-native.yml
assets/: manifest.json  sw.js
assets/fractals/ifs/: Barnsleys-Fern.json  Binary.json  Coral.json  Crystal.json  Dragon.json  Floor.json  Koch-3.json  Spiral.json  Tree.json  Triangle.json  Whirlpool.json  Zigzag.json
assets/fractals/l-system/: DragonCurve.json  GosperCurve.json  HilbertCurve.json  KochCurve.json  KochQuadraticCurve.json  KochQuadraticSnowflake.json  KochSnowflake.json  LsystemBush-1.json  LsystemBush-2.json  LsystemBush-3.json  LsystemSticks-1.json  LsystemSticks-2.json  PeanoFractal.json  PenroseTiling.json  SierpinskiCurve.json  SierpinskiRhombus.json  SierpinskiTriangle.json
src/: app.rs  config.rs  context.rs  fractals.rs  logging.rs  main.rs  ui.rs
src/common/: file_utils.rs
src/errors/: dotenv.rs
src/fractals/ifs/: examples.rs  model.rs  serialization.rs  state.rs  system.rs  validation.rs
src/fractals/ifs/ui/: parameters.rs  settings.rs
src/fractals/ifs/utilities/: json.rs
src/fractals/lsystem/: examples.rs  model.rs  serialization.rs  state.rs  validation.rs
src/fractals/lsystem/ui/: settings.rs
src/geometry/: dot.rs  line2d.rs  point2d.rs
src/graphics/: grid.rs  resolution.rs
src/io/: filename.rs  filter.rs  ops_native.rs  ops_wasm.rs  screenshot.rs
src/math/: angle.rs
src/ui/: windows.rs
src/ui/components/: canvas.rs  settings.rs
src/ui/styles/: colors.rs  strokes.rs
src/ui/windows/: main.rs  message.rs
