[package]
name = "fractal-renderer"
version = "0.1.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/xairaven/FractalRenderer"

[dependencies]
chrono = "0.4.39"             # Logging purposes.
dotenvy = "0.15.7"            # .env file processing.
egui = "0.30.0"               # GUI Library.
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.1"                # Logger.
image = "0.25.5"              # Imaging library.
indoc = "2.0.5"               # Indented document literals
log = "0.4.22"                # Logging facade.
rand = "0.8.5"                # Random number generators and other randomness functionality.
rfd = "0.15.1"                # File Dialogs.
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"        # A JSON serialization/deserialization library
strum_macros = "0.26.4"       # Helpful macros for working with enums and strings
thiserror = "2.0.9"           # Custom enum errors.

[profile.release]
lto = true